objects/Student__c.object
<CustomObject>
    <description>To add the student Record</description>
    <label>Student</label>
    <nameField>
        <displayFormat>ST-{0000}</displayFormat>
        <label>Student Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>To to Email of Student</description>
        <externalId>true</externalId>
        <inlineHelpText>Enter Email here</inlineHelpText>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Resume__c</fullName>
        <label>Resume</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Stream__c</fullName>
        <label>Stream</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cloud Computing</fullName>
                    <default>true</default>
                    <label>Cloud Computing</label>
                </value>
                <value>
                    <fullName>Data Science</fullName>
                </value>
                <value>
                    <fullName>Mobile APP Development</fullName>
                </value>
                <value>
                    <fullName>Web Development</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Courses__c</fullName>
        <label>Courses</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Stream__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C++</fullName>
                </value>
                <value>
                    <fullName>python</fullName>
                </value>
                <value>
                    <fullName>salesforce admin</fullName>
                </value>
                <value>
                    <fullName>java</fullName>
                </value>
                <value>
                    <fullName>mobile app development</fullName>
                </value>
                <value>
                    <fullName>Adroid app debelopment</fullName>
                </value>
                <value>
                    <fullName>Machine Learning</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>Aws</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hobbies__c</fullName>
        <label>Hobbies</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Playing Cricket</fullName>
                </value>
                <value>
                    <fullName>dancing</fullName>
                </value>
                <value>
                    <fullName>singing</fullName>
                </value>
                <value>
                    <fullName>cycling</fullName>
                </value>
                <value>
                    <fullName>running</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Graduated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Graduated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Birth_date__c</fullName>
        <label>Birth date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X12thmarks__c</fullName>
        <label>12thmarks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Age_Formula__c</fullName>
        <formula>YEAR( TODAY() ) -  YEAR( Birth_date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Marks__c</fullName>
        <formula>assigment_test1__c  +  assigment_test_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Marks</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>scholarship__c</fullName>
        <label>scholarship</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Initial_Fees__c</fullName>
        <label>Initial Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Referance_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referance by</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student_Name__c</fullName>
        <defaultValue>&quot;Ram&quot;</defaultValue>
        <description>To store the student name</description>
        <inlineHelpText>Enter Student Name</inlineHelpText>
        <label>Student Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Type__c</fullName>
        <formula>IF( Age__c &gt;= 18 &amp;&amp; Age__c &lt;= 25, &quot;fresher&quot;, IF(Age__c &gt;25, &quot;Working Professional&quot;, &quot;undefined&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_status__c</fullName>
        <label>Approval status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_s_State__c</fullName>
        <label>Student&apos;s State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>assigment_test1__c</fullName>
        <label>assigment test1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Student_location__c</fullName>
        <label>Student location</label>
        <scale>5</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>assigment_test_2__c</fullName>
        <label>assigment test 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_batches__c</fullName>
        <label>Number of batches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Registration_date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Registration date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Student_s_contact__c</fullName>
        <label>Student&apos;s contact</label>
        <type>Phone</type>
    </fields>
    <recordTypes>
        <fullName>Fresher_Record_type</fullName>
        <active>true</active>
        <label>Fresher Record type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Working_Professional_record_type</fullName>
        <active>true</active>
        <label>Working Professional record type</label>
    </recordTypes>
    <validationRules>
        <fullName>age_validation</fullName>
        <active>true</active>
        <errorConditionFormula>Age__c &lt; 10</errorConditionFormula>
        <errorDisplayField>Age__c</errorDisplayField>
        <errorMessage>Please enter age greater than 10</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>initialfees_rule</fullName>
        <active>true</active>
        <errorConditionFormula>(Initial_Fees__c &lt;=2000 &amp;&amp;  ISPICKVAL( Courses__c , &quot;Aws&quot;))|| (Initial_Fees__c &lt;=3000 &amp;&amp;  ISPICKVAL( Courses__c , &quot;salesforce admin&quot;))||(Initial_Fees__c &lt;=4000 &amp;&amp;  ISPICKVAL( Courses__c , &quot;C++&quot;))</errorConditionFormula>
        <errorMessage>Initial fees should be minimum</errorMessage>
    </validationRules>
</CustomObject>